[package]
name = "rusty-records"
version = "0.1.0"
authors = ["CableSynth <lorencalebbaum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
rand = "0.8.0"
unicode-segmentation = "1.2"
unicode-width = "0.1"